--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Redux very simple auth",
   "main": "index.js",
   "scripts": {
+    "compile": "node -r dotenv/config --harmony bin/compile",
     "start": "npm run dev",
     "dev": "node -r dotenv/config bin/server --hot"
   },
@@ -14,7 +15,8 @@
     "lodash": "^3.10.1",
     "redux": "^3.0.0",
     "redux-actions": "^0.9.0",
-    "redux-thunk": "^1.0.0"
+    "redux-thunk": "^1.0.0",
+    "dotenv": "^1.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.17",
