--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "Alex Bachuk, http://alexbachuk.com",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^1.2.0",
     "history": "1.13.1",
     "lodash": "^3.10.1",
+    "react": "^0.14.7",
+    "react-redux": "^4.0.0",
     "redux": "^3.0.0",
     "redux-actions": "^0.9.0",
-    "redux-thunk": "^1.0.0",
-    "dotenv": "^1.2.0"
+    "redux-thunk": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.17",
